
* WARNING: Backward-incompatibility!
  Previously the order in which makefiles were remade was not explicitly
  stated, but it was (roughly) the inverse of the order in which they were
  processed by make.  In this release, the order in which makefiles are
  rebuilt is the same order in which make processed them, and this is defined
  to be true in the GNU make manual.

* WARNING: New build requirement
  GNU make utilizes facilities from GNU Gnulib: Gnulib requires certain C99
  features in the C compiler and so these features are required by GNU make:
  https://www.gnu.org/software/gnulib/manual/html_node/C99-features-assumed.html
  The configure script should verify the compiler has these features.

* New feature: The $(let ...) function
  This function allows user-defined functions to define a set of local
  variables: values can be assigned to these variables from within the
  user-defined function and they will not impact global variable assignments.
  Implementation provided by Jouke Witteveen <j.witteveen@gmail.com>

* New debug option "print" will show the recipe to be run, even when silent
  mode is set.

* New debug option "why" will show why a target is rebuilt (which
  prerequisites caused the target to be considered out of date).

* The existing --trace option is made equivalent to --debug=print,why

* Target-specific variables can now be marked "unexport".

* Exporting / unexporting target-specific variables is handled correctly, so
  that the attribute of the most specific variable setting is used.

* Special targets like .POSIX are detected upon definition, ensuring that any
  change in behavior takes effect immediately, before the next line is parsed.

* A long-standing issue with the directory cache has been resolved: changes
  made as a side-effect of some other target's recipe are now noticed as
  expected.

* GNU Make can now be built for MS-Windows using the Tiny C tcc compiler.


Version 4.3 (19 Jan 2020)
